force-app/main/default/objects/Venue__c/fields/Availability_Status_Custom__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status_Custom__c</fullName>
    <label>Availability Status Custom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>