force-app/main/default/objects/Venue__c/fields/Capacity_Custom__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Custom__c</fullName>
    <label>Capacity Custom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>