force-app/main/default/objects/Venue__c/fields/Location_Custom__c.field-meta.xml
<CustomField>
    <fullName>Location_Custom__c</fullName>
    <label>Location Custom</label>
    <type>Url</type>
</CustomField>